# aosl-core

./: AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: aosl-ci.yml  ci.yml
aosl/: __init__.py  config.py  scorer.py
data/outputs/: README.md  outputs_chatgpt_v1.jsonl
data/scoring/: manual_scores_v1.csv
docs/: CONSTRAINS.md  PILOT_RESULTS_v1.md  SPEC.md
docs/data/prompts/: prompts_v1.jsonl
fixtures/: README.md
fixtures/aosl/v1/: README.md
fixtures/aosl/v1/meta/: baseline_threshold.json
fixtures/aosl/v1/outputs/p0001/: bad.md  good.md
fixtures/aosl/v1/outputs/p0002/: bad.md  good.md
fixtures/aosl/v1/prompts/p0001/: prompt.md
fixtures/aosl/v1/prompts/p0002/: prompt.md
fixtures/aosl/v1/specs/: p0002.json
fixtures/aosl/v1/violations/p0001/: bad.json  good.json
fixtures/aosl/v1/violations/p0002/: bad.json  good.json
tests/: test_scorer.py
tools/: aosl_fixture_builder.py
