[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "aosl-core"
version = "0.1.0"
description = "Minimal AI Output Stability Layer core scoring package"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "AOSL contributors" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
[tool.setuptools.packages.find]
where = ["."]
include = ["aosl*"]
